clusters/common/apps/homer-operator/install/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer
  namespace: public
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "homer.rajsingh.info"
    - "home.rajsingh.info"
    - "homer.lukehouge.com"
    - "home.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: dashboard-sample-homer
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
